<resources>
    <string name="app_name">My Notes</string>
    <string name="mynotes">My notes</string>
    <string name="string_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_here">Type text here</string>
    <string name="vario">Vario</string>
    <string name="extra">Media</string>
    <string name="add_image">Add Image</string>
    <string name="add_uri">Add Uri</string>
    <string name="enter_URL">Type a URLa</string>
    <string name="add">Type text here...</string>
    <string name="a_adir">Add</string>
    <string name="cancelar">Cancel</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_question">Are you sure you want to delete this note?</string>
    <string name="mytask">My Tasks</string>
    <string name="add_record">Add recording</string>
    <string name="permission_denied">Permission denied</string>
    <string name="pick_color">Pick color</string>
    <string name="note_title_empty">The title cannot be an empty field</string>
    <string name="note_body_empty">The note must contain something</string>
    <string name="task_name">Task name</string>
    <string name="task_date">Date reminder:</string>
    <string name="task_date_button">Define reminder</string>
    <string name="task_create">Create task</string>
    <string name="note_create">Create note</string>
    <string name="create_title">What do you want to create?</string>
    <string name="denied_permission">Permission denied</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notas">Notes</string>
    <string name="tareas">Tasks</string>
    <string name="add_video">Add video</string>
    <string name="task_notification_title">Reminder</string>
    <string name="add_capture">Add Image (Take picture)</string>
    <string name="add_video_take_video">Add video (Take video)</string>
</resources>